make the changes following discussion with Housing

--- a/app/views/forms/housing/CBL16.html
+++ b/app/views/forms/housing/CBL16.html
@@ -43,5 +43,11 @@
       <form class="form" method="post">
     </div>
 </div>
+<div class="IT-notes-box">
+  <h3 class="govuk-heading-s">IT notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>validation: Confirm 16 or over</li>
+    </ul>
+</div>
 
 {% endblock %}
