--- a/app/views/forms/housing/CBL5yearsadd.html
+++ b/app/views/forms/housing/CBL5yearsadd.html
@@ -45,8 +45,8 @@
           },
           items: [
             {
-              value: "Tennant",
-              text: "Tennant"
+              value: "tenant",
+              text: "tenant"
             },
             {
               value: "Lodger",
@@ -199,15 +199,23 @@
 <div class="content-notes-box">
   <h3 class="govuk-heading-s">Content notes:</h3>
   <ul class="govuk-list govuk-list--bullet">
-      <li>guidance about what we need to be re-drafted and consistent with the before you start</li>
+      <li>guidance about what we need to be re-drafted and consistent with the before you start page</li>
 
   </ul>
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>not ready - just for illustration of what we ask for each - will depend on the design decision for add person </li>
-    <li>need guidance text - just placeholder just now</li>
+    <li>we will use the same pattern as for adding person or children </li>
+    <li>agreed by Housing - need 6 addresses and a textbox on the last one if the applicant need to add more addresses</li>
+    </ul>
+</div>
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+    <li>For the first address, date moved out doesn't need to be filled in, but it's needed for the other pages</li>
+    <li>need to enter an address (textbox not empty) + need to pick a type + need at least one reason for leaving (if Other then need a description)</li>
+    <li>Dates: need to have input and to be numbers but no other validation is needed</li>
     </ul>
 </div>
 
