--- a/app/views/forms/housing/CBLadd-children.html
+++ b/app/views/forms/housing/CBLadd-children.html
@@ -73,7 +73,7 @@
         name: "gender-desc1",
         classes: "govuk-!-width-two-thirds",
         label: {
-          text: "Describe gender in another way"
+          text: "Describe gender in another way (optional)"
         }
       }) }}
       {% endset -%}
@@ -100,8 +100,8 @@
             text: "Male"
           },
           {
-            value: "Another gender",
-            text: "Another gender",
+            value: "Other",
+            text: "Other",
             conditional: {
               html: genderHtml
             }
@@ -192,7 +192,7 @@
           name: "gender-desc1",
           classes: "govuk-!-width-two-thirds",
           label: {
-            text: "Describe gender in another way"
+            text: "Describe gender in another way (optional)"
           }
         }) }}
         {% endset -%}
@@ -219,8 +219,8 @@
               text: "Male"
             },
             {
-              value: "Another gender",
-              text: "Another gender",
+              value: "Other",
+              text: "Other",
               conditional: {
                 html: genderHtml
               }
@@ -313,7 +313,7 @@
           name: "gender-desc1",
           classes: "govuk-!-width-two-thirds",
           label: {
-            text: "Describe gender in another way"
+            text: "Describe gender in another way (optional)"
           }
         }) }}
         {% endset -%}
@@ -340,8 +340,8 @@
               text: "Male"
             },
             {
-              value: "Another gender",
-              text: "Another gender",
+              value: "Other",
+              text: "Other",
               conditional: {
                 html: genderHtml
               }
@@ -385,8 +385,9 @@
 
       <div class="design-notes-box">
           <h3 class="govuk-heading-s">Design notes:</h3>
-         <p>Wording would probably change - need to be seen by Sharon and approved by Housing</p>
-         <p><strong>GDPR: are we allowed to ask for thier address, is there a need?</strong></p>
+          <p><strong> will be coded like add person for Monday - 5 children max + text box on the 5th</strong></p>
+         <p>Wording will change for guidance top text, to be consistent</p>
+         <p>Housing confirmed address is needed to confirm the children are really living on a regular basis. They contact other parent/carer later in the process to make sure but don't need us to ask for the name of that parent/carer at the moment </p>
       </div>
     </div>
 </div>
