--- a/app/views/forms/housing/CBLaddress2-loop.html
+++ b/app/views/forms/housing/CBLaddress2-loop.html
@@ -67,8 +67,8 @@
           },
           items: [
             {
-              value: "Tennant",
-              text: "Tennant"
+              value: "tenant",
+              text: "tenant"
             },
             {
               value: "Lodger",
