--- a/app/views/forms/housing/CBLaddress3-loop.html
+++ b/app/views/forms/housing/CBLaddress3-loop.html
@@ -90,8 +90,8 @@
           },
           items: [
             {
-              value: "Tennant",
-              text: "Tennant"
+              value: "tenant",
+              text: "tenant"
             },
             {
               value: "Lodger",
