--- a/app/views/forms/housing/CBLaddress4-loop.html
+++ b/app/views/forms/housing/CBLaddress4-loop.html
@@ -113,8 +113,8 @@
           },
           items: [
             {
-              value: "Tennant",
-              text: "Tennant"
+              value: "tenant",
+              text: "tenant"
             },
             {
               value: "Lodger",
