--- a/app/views/forms/housing/CBLbabies.html
+++ b/app/views/forms/housing/CBLbabies.html
@@ -8,7 +8,7 @@
 {% block content %}
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
         Apply online for Housing
       </h1>
@@ -32,7 +32,7 @@
   name: "is-pregnant",
   fieldset: {
     legend: {
-      text: "Are you or anyone living with you pregnant?",
+      text: "Are you or anyone who will live with you pregnant?",
       isPageHeading: true,
       classes: "govuk-fieldset__legend--m"
     }
@@ -62,7 +62,12 @@
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-   <p>The wording would need to be approved and maybe changed by Sharon / Housing</p>
+   <p>The wording will be checked by Sharon - but pattern agreed by Housing</p>
+</div>
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
+   <p>new page</p>
+   <p>validation will be needed (if yes, textbox can't be empty) but will need the wording to be agreed before I can provide an error message</p>
 </div>
 
 {% endblock %}
