--- a/app/views/forms/housing/CBLcurrent.html
+++ b/app/views/forms/housing/CBLcurrent.html
@@ -8,7 +8,7 @@
 {% block content %}
 <a class="govuk-back-link" href="javascript: history.go(-1)">Back</a>
   <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+    <div class="govuk-grid-column-full">
       <h1 class="govuk-heading-l">
         Apply online for Housing
       </h1>
@@ -92,6 +92,15 @@
       }) }}
 
     </div>
+</div>
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>can be coded</li>
+      <li>extra textbox for Different living situation</li>
+      <li>we need at list one checked, and if open a text box, then it needs not to be empty</li>
+      <li>Select at least one - Give details (for Different living situation) (to be confirmed by Sharon)</li>
+    </ul>
 </div>
 
 
