--- a/app/views/forms/housing/CBLdeclaration1.html
+++ b/app/views/forms/housing/CBLdeclaration1.html
@@ -88,12 +88,17 @@
         {{ govukButton({
           text: "Continue",
           classes: "button-primary",
-          href: "/forms/housing/CBLdeclaration2.html"
+          href: "/forms/housing/CBLmonitor.html"
         }) }}
       
     </div>
 </div>
 
-
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+    <li>OK - can be coded, flow changed though, monitor info is now after</li>
+    </ul>
+</div>
 
 {% endblock %}
