--- a/app/views/forms/housing/CBLextra-reason.html
+++ b/app/views/forms/housing/CBLextra-reason.html
@@ -134,7 +134,7 @@ Health, care, social and support needs
     <h3 class="govuk-heading-s">Design notes:</h3>
     <p>not sure these work with nested radio buttons... might be better to go back to 4 pages instead of grouping them - when yes, another question appears. With the IT form, it will not appear nested but under the first bullet point, might work better?</p>
     <p>if IT can do it, the radio buttons might look better inline?</p>
-    <p><strong>need to make sure the nested radio buttons don't open something else</strong></p>
+    <p><strong>if they say no to medical application, then we need to prompt them to fill that form, could be guidance here and /or in the confirmation email?</strong></p>
 </div>
 
 {% endblock %}
