--- a/app/views/forms/housing/CBLimmigration.html
+++ b/app/views/forms/housing/CBLimmigration.html
@@ -32,7 +32,7 @@
           name: "immigration",
           fieldset: {
             legend: {
-              text: "Are you or anyone who lives with you under immigration control?",
+              text: "Are you or anyone who will live with you under immigration control?",
               isPageHeading: true,
               classes: "govuk-fieldset__legend--m"
             }
@@ -60,8 +60,9 @@
       }) }}
     </div>
 </div>
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
-    <p>Should we not ask about anyone who WILL live with you instead of Who lives with you NOW?</p>
-  </div>
+<div class="IT-notes-box">
+  <h3 class="govuk-heading-s">IT notes:</h3>
+  <p>wording is different - now asking WILL live with you</p>
+  <p>validation: Confirm you or anyone under immigration control</p>
+</div>
 {% endblock %}
