--- a/app/views/forms/housing/CBLinfo-housed.html
+++ b/app/views/forms/housing/CBLinfo-housed.html
@@ -16,7 +16,7 @@
             We need to know who will be living with you
           </h2>
           <p>In the following screens, only add children if they live permanently with you.</p>
-          <p>Any children staying with you occasionally will be added later.</p>
+          <p>Any children from a previous relation who stay regularly overnight will be added later. <em>(this content will need to match what we put on the relevant screen)</em></p>
 <br><br>
           <form class="form" method="post">
           {% from "radios/macro.njk" import govukRadios %}
@@ -54,22 +54,21 @@
   <ul class="govuk-list govuk-list--bullet">
     <li><strong>Content for this page is only a place holder, it will be re-worded before testing</strong></li>
     <li>Usability testing will help to see what is needed</li>
-    <li>this is a possible information page to add to provide guidance about the pages coming after (info about each person living with the main applicant)</li>
-    <li> we could add guidance about the meaning of joint applicant? pregnancy? adult / child status  for 16-18? or put it on the following page when it's relevant?</li>
+    <li>content about other children on this page should match the relevant screen later</li>
   </ul>
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-    <p><strong>Can the person live alone?</strong> if so, then we should ask and bypass the next page</p>
-    <p><strong>There are a lot of potential flaws the moment:</strong></p>
     <ul class="govuk-list govuk-list--bullet">
-      <li>should the main applicant add themselves here? - I assumed not so captured the info previously (DOB and gender)</li>
-      <li>where do you enter children living with you permanently? - I assumed here</li>
-      <li>pregnancy: what if it's twins or more? teen pregnancy? main applicant is pregnant?</li>
-      <li>number for the adult label: There is an 'adult 1' on the 'pregnancy page' and the same number appear on the 'not pregnant' page = confusing!</li>
+      <li>we expect the user to add everyone who will be living with them but the kids from a previous relation who regularly stay overnight (this is du to the process they follow)</li>
     </ul>
-    <p><a href="http://hmrc.github.io/assets-frontend/patterns/add-to-a-list/index.html" target="_blank" rel="noopener" ><strong>There is a pattern</strong></a> which would be really good but probably not possible for IT to implement at the moment.</p>
-    <p><a href="{{ asset_path }}images/add-to-list.gif"><img src="{{ asset_path }}images/add-to-list.gif" alt="add to a list pattern displayed" style="height:400px;"></a></p>
+</div>
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>if they say they live alone, they jump to the pregnancy question - if no, then they will go to the first screen to add person</li>
+      <li>Validation - error message : to be provided when content is drafted</li>
+    </ul>
 </div>
 
 {% endblock %}
