--- a/app/views/forms/housing/CBLjoint.html
+++ b/app/views/forms/housing/CBLjoint.html
@@ -32,7 +32,7 @@
   name: "is-joint",
   fieldset: {
     legend: {
-      text: "Is there one or more joint applicant?",
+      text: "Is there a joint applicant?",
       isPageHeading: true,
       classes: "govuk-fieldset__legend--m"
     }
@@ -65,7 +65,11 @@
 </div>
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
-   <p>The wording would need to be approved and maybe changed by Sharon / Housing</p>
+   <p>The wording would need to be checked by Sharon but agreed by Housing</p>
 </div>
-
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
+   <p>new page</p>
+   <p>validation will be needed (if yes, textbox can't be empty) but will need the wording to be agreed before I can provide an error message</p>
+</div>
 {% endblock %}
