--- a/app/views/forms/housing/CBLmonitor.html
+++ b/app/views/forms/housing/CBLmonitor.html
@@ -25,7 +25,7 @@
         {{ govukButton({
           text: "Continue",
           classes: "button-primary",
-          href: "/forms/housing/CBLdeclaration1.html"
+          href: "/forms/housing/CBLdeclaration2.html"
         }) }}
       
 
@@ -34,10 +34,15 @@
 <div class="content-notes-box">
     <h3 class="govuk-heading-s">Content notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-        <li><strong>this content was not seen by Sharon - there is too much </strong></li>
+        <li><strong>this content was not seen by Sharon - there is too much - Housing will review it anyway</strong></li>
         <li>people won't read it especially considering how long this form takes to fill in</li>
     </ul>
 </div>
-
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+    <li>flow changed, monitor info was before councillor declaration</li>
+    </ul>
+</div>
 
 {% endblock %}
