--- a/app/views/forms/housing/CBLother-properties.html
+++ b/app/views/forms/housing/CBLother-properties.html
@@ -22,7 +22,7 @@
   name: "properties-details",
   classes: "govuk-!-width-two-thirds",
   label: {
-    text: "Address"
+    text: "Address, including postcode"
   }
 }) }}
 {% endset -%}
