--- a/app/views/forms/housing/CBLout.html
+++ b/app/views/forms/housing/CBLout.html
@@ -15,9 +15,13 @@
       <p>You need to contact our Housing Advice and Homelessness Team (contact details to follow)</p>
     </div>
 </div>
+<div class="design-notes-box">
+  <h3 class="govuk-heading-s">Design notes:</h3>
+  <p>contact details number needed</p>
+</div>
 <div class="IT-notes-box">
   <h3 class="govuk-heading-s">IT notes:</h3>
-  <p>Change the sentence to what is on this screen: Remove 'Please' and change to 'You need to'.</p>
+  <p>Change the sentence to what is on this screen: Remove 'Please' and change to 'You need to'</p>
 </div>
 
 {% endblock %}
