--- a/app/views/forms/housing/CBLreasons.html
+++ b/app/views/forms/housing/CBLreasons.html
@@ -186,10 +186,10 @@
     </div>
 </div>
 
-<div class="design-notes-box">
-    <h3 class="govuk-heading-s">Design notes:</h3>
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-    <li>this is a very long list, but as a lot of pages are very long ...</li>
+    <li>agreed by Housing, - need at least one checked: Select at least one reason (error message to be agreed by Sharon) - or need to have a text in the "Other" textbox</li>
     </ul>
 </div>
 
