--- a/app/views/forms/housing/members-household/member1.html
+++ b/app/views/forms/housing/members-household/member1.html
@@ -88,7 +88,7 @@
         value: data['gender-desc1'],
         classes: "govuk-!-width-two-thirds",
         label: {
-          text: "Describe gender in another way"
+          text: "Describe gender in another way (optional)"
         }
       }) }}
       {% endset -%}
@@ -115,8 +115,8 @@
             text: "Male"
           },
           {
-            value: "Another gender",
-            text: "Another gender",
+            value: "Other",
+            text: "Other",
             conditional: {
               html: genderHtml
             }
