--- a/app/views/patterns/add-to-a-list/person1-gender.html
+++ b/app/views/patterns/add-to-a-list/person1-gender.html
@@ -23,7 +23,7 @@
               value: data['gender-desc1'],
               classes: "govuk-!-width-two-thirds",
               label: {
-                text: "Describe gender in another way"
+                text: "Describe gender in another way (optional)"
               }
             }) }}
             {% endset -%}
@@ -51,8 +51,8 @@
                   text: "Male"
                 },
                 {
-                  value: "Another gender",
-                  text: "Another gender",
+                  value: "Other",
+                  text: "Other",
                   conditional: {
                     html: genderHtml
                   }
