--- a/app/views/forms/housing/CBLNI.html
+++ b/app/views/forms/housing/CBLNI.html
@@ -22,7 +22,7 @@
   name: "ni",
   classes: "govuk-!-width-one-third",
   label: {
-    text: "Enter your national insurance number"
+    text: "Enter your National Insurance number"
   }
 }) }}
 {% endset -%}
@@ -65,16 +65,18 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>the actual single checkbox doesn't work (no visual feedback provided)</li>
-      <li>we could use radio buttons as above with a question - to be validated by Housing</li>
-      <li>we could provide guidance about NI as above (to be validated)</li>
-      <li>CHECK if this is ok with GDPR: <a href="https://design-system.service.gov.uk/patterns/national-insurance-numbers/" target="_blank" rel="noopener" >about using the NI</a>: <strong>You shouldn’t use National Insurance numbers to verify a user’s identity.</strong></li>
+      <li>pattern agreed by housing</li>
+      <li>they need the NI to provide the service</li>
+      <li>might need to double check with legal though</li>
+      <li>GOVUK guidance <a href="https://design-system.service.gov.uk/patterns/national-insurance-numbers/" target="_blank" rel="noopener" >about using the NI</a>: <strong>You shouldn’t use National Insurance numbers to verify a user’s identity.</strong></li>
     </ul>
   </div>
 
   <div class="IT-notes-box">
       <h3 class="govuk-heading-s">IT notes:</h3>
-      <p>On the actual page, the inputs field is too long - should be reduced</p>
+      <p>pattern agreed by Housing, can be coded</p>
+      <p>validation: Confirm have National Insurance number</p>
+      <p>validation if yes: Enter National Insurance number</p>
     </div>
 
 {% endblock %}
