--- a/app/views/forms/housing/CBLadd-person.html
+++ b/app/views/forms/housing/CBLadd-person.html
@@ -73,7 +73,7 @@
         name: "gender-desc1",
         classes: "govuk-!-width-two-thirds",
         label: {
-          text: "Describe gender in another way"
+          text: "Describe gender in another way (optional)"
         }
       }) }}
       {% endset -%}
@@ -100,8 +100,8 @@
             text: "Male"
           },
           {
-            value: "Another gender",
-            text: "Another gender",
+            value: "Other",
+            text: "Other",
             conditional: {
               html: genderHtml
             }
@@ -207,7 +207,7 @@
           name: "gender-desc2",
           classes: "govuk-!-width-two-thirds",
           label: {
-            text: "Describe gender in another way"
+            text: "Describe gender in another way (optional)"
           }
         }) }}
         {% endset -%}
@@ -234,8 +234,8 @@
               text: "Male"
             },
             {
-              value: "Another gender",
-              text: "Another gender",
+              value: "Other",
+              text: "Other",
               conditional: {
                 html: genderHtml
               }
@@ -342,7 +342,7 @@
           name: "gender-desc3",
           classes: "govuk-!-width-two-thirds",
           label: {
-            text: "Describe gender in another way"
+            text: "Describe gender in another way (optional)"
           }
         }) }}
         {% endset -%}
@@ -369,8 +369,8 @@
               text: "Male"
             },
             {
-              value: "Another gender",
-              text: "Another gender",
+              value: "Other",
+              text: "Other",
               conditional: {
                 html: genderHtml
               }
@@ -477,7 +477,7 @@
             name: "gender-desc3",
             classes: "govuk-!-width-two-thirds",
             label: {
-              text: "Describe gender in another way"
+              text: "Describe gender in another way (optional)"
             }
           }) }}
           {% endset -%}
@@ -504,8 +504,8 @@
                 text: "Male"
               },
               {
-                value: "Another gender",
-                text: "Another gender",
+                value: "Other",
+                text: "Other",
                 conditional: {
                   html: genderHtml
                 }
@@ -612,7 +612,7 @@
             name: "gender-desc3",
             classes: "govuk-!-width-two-thirds",
             label: {
-              text: "Describe gender in another way"
+              text: "Describe gender in another way (optional)"
             }
           }) }}
           {% endset -%}
@@ -639,8 +639,8 @@
                 text: "Male"
               },
               {
-                value: "Another gender",
-                text: "Another gender",
+                value: "Other",
+                text: "Other",
                 conditional: {
                   html: genderHtml
                 }
@@ -747,7 +747,7 @@
             name: "gender-desc3",
             classes: "govuk-!-width-two-thirds",
             label: {
-              text: "Describe gender in another way"
+              text: "Describe gender in another way (optional)"
             }
           }) }}
           {% endset -%}
@@ -774,8 +774,8 @@
                 text: "Male"
               },
               {
-                value: "Another gender",
-                text: "Another gender",
+                value: "Other",
+                text: "Other",
                 conditional: {
                   html: genderHtml
                 }
