--- a/app/views/forms/housing/CBLareas.html
+++ b/app/views/forms/housing/CBLareas.html
@@ -155,6 +155,12 @@
                                 Busby and Netherlee
                         </label>
                     </div>
+                    <div class="govuk-checkboxes__item">
+                        <input class="govuk-checkboxes__input" id="area-17" name="area" type="checkbox" value="area17">
+                        <label class="govuk-label govuk-checkboxes__label" for="area-17">
+                                Giffnock
+                        </label>
+                    </div>
                 </div>
 
             </fieldset>
@@ -164,13 +170,19 @@
         {{ govukButton({
             text: "Continue",
             classes: "button-primary",
-            href: "/forms/housing/CBLmonitor.html"
+            href: "/forms/housing/CBLdeclaration1.html"
           }) }}
       
 
     </div>
 </div>
-
+<div class="IT-notes-box">
+        <h3 class="govuk-heading-s">IT notes:</h3>
+        <ul class="govuk-list govuk-list--bullet">
+        <li>can be coded - Giffnock has been added. It was missing from the form</li>
+        <li>Select at least one</li>
+        </ul>
+    </div>
 
 
 {% endblock %}
