--- a/app/views/forms/housing/CBLdeclaration2.html
+++ b/app/views/forms/housing/CBLdeclaration2.html
@@ -62,7 +62,7 @@
     <ul class="govuk-list govuk-list--bullet">
         <li><strong>this content was not seen by Sharon - there is too much </strong></li>
         <li>people won't read it especially considering how long this form takes to fill in</li>
-        <li>need the link to the privacy policy</li>
+        <li>need the link to the privacy policy?</li>
     </ul>
 </div>
 
