--- a/app/views/forms/housing/CBLdob.html
+++ b/app/views/forms/housing/CBLdob.html
@@ -59,8 +59,15 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>To capture the DOB of the applicant</li>
-      <li>also it prepares the user to enter it that way for the other members of the household?</li>
+      <li>To capture the DOB of the applicant - agreed by Housing</li>
+      <li>prepares the user to enter it that way for the other members of the household</li>
+    </ul>
+</div>
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>validation: 3 fields are not empty and with numbers</li>
+      <li>ideally also check it's a real date (no 31 April) but Housing will check anyway so not essential</li>
     </ul>
 </div>
 
