--- a/app/views/forms/housing/CBLsummary-aboutyou.html
+++ b/app/views/forms/housing/CBLsummary-aboutyou.html
@@ -34,7 +34,7 @@
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Advocate or power of attorney:</th><td class="govuk-table__cell no-border">{{ data['contact-att']}}</td></tr>
                 {% endif %}
                 <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Date of birth:</th><td class="ngovuk-table__cell o-border">{{ data['dob-applicant-day'] }}/{{ data ['dob-applicant-month'] }}/{{ data['dob-applicant-year'] }}</td></tr>
-                <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Gender:</th><td class="govuk-table__cell no-border">{% if data['gender-applicant'] === 'Another gender' %} {{data['gender-desc']}} {% else %} {{data['gender-applicant']}} {% endif %}</td></tr>
+                <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Gender:</th><td class="govuk-table__cell no-border">{% if data['gender-applicant'] === 'Other' %} {{data['gender-desc']}} {% else %} {{data['gender-applicant']}} {% endif %}</td></tr>
               </tbody>
             </table>
             </div>
@@ -52,8 +52,15 @@
 <div class="design-notes-box">
     <h3 class="govuk-heading-s">Design notes:</h3>
     <ul class="govuk-list govuk-list--bullet">
-      <li>If we want to try to have little summary, this could be the first stage where we sum up some info?</li>
+      <li>Summary - agreed by Housing - would probably improve user confidence they are providing the right information</li>
       <li>this also helps to mark the end of a section</li>
+    </ul>
+</div>
+<div class="IT-notes-box">
+    <h3 class="govuk-heading-s">IT notes:</h3>
+    <ul class="govuk-list govuk-list--bullet">
+      <li>Edit details takes you back to the page "about you" with name , phone and email</li>
+      <li>gender: display Female, or Male or Other, if description of gender is provided then display it INSTEAD of Other</li>
     </ul>
 </div>
 
