--- a/app/views/forms/housing/members-household/add-member3-loop.html
+++ b/app/views/forms/housing/members-household/add-member3-loop.html
@@ -23,7 +23,7 @@
           <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Address:</th><td class="govuk-table__cell no-border">{{ data ['previous-address-member1']}}</td></tr>
           <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Relationship to you:</th><td class="govuk-table__cell no-border">{{data['relation-member1']}}</td></tr>
           <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Date of birth:</th><td class="govuk-table__cell no-border">{{data['dob-member1-day']}}/{{data['dob-member1-month']}}/{{data['dob-member1-year']}}</td></tr>
-          <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Gender:</th><td class="govuk-table__cell no-border">{% if data['gender-member1'] === 'Another gender' %} {{data['gender-desc1']}} {% else %}{{data['gender-member1']}} {% endif %}</td></tr>
+          <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Gender:</th><td class="govuk-table__cell no-border">{% if data['gender-member1'] === 'Other' %} {{data['gender-desc1']}} {% else %}{{data['gender-member1']}} {% endif %}</td></tr>
         </tbody>
       </table>
     </div>
@@ -40,7 +40,7 @@
           <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Address:</th><td class="govuk-table__cell no-border">{{ data ['previous-address-member2']}}</td></tr>
           <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Relationship to you:</th><td class="govuk-table__cell no-border">{{data['relation-member2']}}</td></tr>
           <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Date of birth:</th><td class="govuk-table__cell no-border">{{data['dob-member2-day']}}/{{data['dob-member2-month']}}/{{data['dob-member2-year']}}</td></tr>
-          <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Gender:</th><td class="govuk-table__cell no-border">{% if data['gender-member2'] === 'Another gender' %} {{data['gender-desc2']}} {% else %}{{data['gender-member2']}} {% endif %}</td></tr>
+          <tr class="govuk-table__row"><th  class="govuk-table__header no-border">Gender:</th><td class="govuk-table__cell no-border">{% if data['gender-member2'] === 'Other' %} {{data['gender-desc2']}} {% else %}{{data['gender-member2']}} {% endif %}</td></tr>
         </tbody>
       </table>
     </div>
